# connecteer

./: Cargo.toml  crates.js  flake.nix  help.html  index.html  search-index.js  settings.html  source-files.js
.devcontainer/windows/: devcontainer.json
connecteer/: Cargo.toml
connecteer-capabilities/: Cargo.toml
connecteer-capabilities/examples/: buildable.rs
connecteer-capabilities/src/: bridge.rs  connection.rs  identity.rs  lib.rs  middleware.rs  pipeline.rs  sealed.rs
connecteer-translation/: Cargo.toml
connecteer-translation/src/: buffer.rs  io.rs  lib.rs
connecteer/src/: buffer.rs  lib.rs
connecteer_capabilities/: all.html  index.html  sidebar-items.js  struct.Pipeline.html  trait.Connection.html  trait.Middleware.html
connecteer_capabilities/connection/: index.html  trait.Connection.html
connecteer_capabilities/identity/: index.html  sidebar-items.js  struct.Base.html  struct.Identity.html  struct.SingleGen.html  struct.Wrapper.html
connecteer_capabilities/middleware/: fn.fuck_mut.html  index.html  opaque..html  sidebar-items.js  trait.Middleware.html  trait.PublicUncallable.html
connecteer_capabilities/pipeline/: fn.fuck_mut.html  index.html  sidebar-items.js  struct.Pipeline.html
connecteer_capabilities/sealed/: index.html  sidebar-items.js  struct.PublicUncallable.html  trait.PublicUncallableSealed.html  trait.Sealed.html
examples/capabilities-test1/: Cargo.toml
examples/capabilities-test1/src/: main.rs
examples/json_messages/: Cargo.toml
examples/json_messages/src/: main.rs
examples/rmp_messages/: Cargo.toml
examples/rmp_messages/src/: main.rs
implementors/connecteer_capabilities/sealed/: trait.Sealed.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/generator/: trait.Generator.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
src/connecteer_capabilities/: connection.rs.html  identity.rs.html  lib.rs.html  middleware.rs.html  pipeline.rs.html  sealed.rs.html
