[package]
name = "capabilities-test1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
connecteer-capabilities = { version = "0.1.0", path = "../../connecteer-capabilities" }
ron = "0.8.0"
serde = "1.0.162"
