[package]
name = "json_messages"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
connecteer = { version = "0.0.0", path = "../../connecteer" }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
